--- a/services.css
+++ b/services.css
@@ -1,10 +1,5 @@
-@font-face {
-    font-family: SackersGothic;
-    src: url(Sackers\ Gothic\ Std\ Light.otf);
-}
-
 * {
-    font-family: SackersGothic;
+    font-family: 'Play', sans-serif;
     padding: 0;
     margin: 0;
     text-decoration: none;
